--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/treefield/TreeField.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/treefield/TreeField.less
@@ -18,4 +18,8 @@
   &.focused {
     #scout.focus-border();
   }
+
+  &.ie {
+    border-radius: 0;
+  }
 }
